Avoid second scrollbar in MS Edge

--- a/app/assets/stylesheets/content/_table.sass
+++ b/app/assets/stylesheets/content/_table.sass
@@ -39,7 +39,7 @@ $input-elements: input, 'input.form--text-field', select, 'select.form--select',
   height:       100%
   width:        100%
   overflow:
-    x: auto
+    x: hidden
     y: hidden
 
   &.-with-footer
